--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,6 @@
 fastapi==0.104.1
 uvicorn[standard]==0.24.0
-anthropic==0.25.9
+anthropic==0.52.2
 sentence-transformers==2.2.2
 faiss-cpu==1.7.4
 PyMuPDF==1.23.8
@@ -15,3 +15,4 @@ numpy==1.24.3
 torch==2.0.1
 huggingface-hub==0.16.4
 transformers==4.31.0
+httpx==0.27.2
